[package]
name = "Rust-DDoS"
version = "0.1.0"
authors = ["X-The-Mystic"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
easy-tokio-rustls = "0.1.3"
tokio = { version = "1.28.0", features = ["full"] }
